lib_LTLIBRARIES = libflm.la

libflm_la_SOURCES =		\
alloc.c				\
buffer.c			\
filter.c			\
error.c				\
file.c				\
io.c				\
map.c				\
monitor.c			\
epoll.c				\
poll.c				\
select.c			\
obj.c				\
tcp_server.c			\
slabs_ext.c			\
stream.c

libflm_la_CFLAGS = -W -Wall -I../include/ -ggdb
libflm_la_LDFLAGS = -lm -lrt
