lib_LTLIBRARIES = libflm.la

libflm_la_SOURCES =		\
addr.c				\
alloc.c				\
buffer.c			\
filter.c			\
error.c				\
file.c				\
io.c				\
map.c				\
monitor.c			\
epoll.c				\
poll.c				\
select.c			\
obj.c				\
tcp_addr.c			\
tcp_client.c			\
tcp_server.c			\
timer.c				\
slabs_ext.c			\
stream.c

libflm_la_CFLAGS = -W -Wall -I../include/ -ggdb
libflm_la_LDFLAGS = -lm -lrt
