lib_LTLIBRARIES = libflm.la

libflm_la_SOURCES =		\
alloc.c				\
buffer.c			\
container.c			\
error.c				\
file.c				\
io.c				\
monitor.c			\
epoll.c				\
select.c			\
obj.c				\
stream.c			\
tcp_server.c			\
thread.c			\
thread_pool.c			\
timer.c

libflm_la_CFLAGS = -W -Wall -I../include/ -ggdb
libflm_la_LDFLAGS = -lm -lrt
